syntax = "proto3";
package proto;
enum EventType {
    HTTP = 0;
}
enum BodyType {
    RAW = 0;
    LINK = 1;
}

message Event {
    string EventId = 1;
    string SenderId = 2;
    EventType Type = 3;
    string Method = 4;
    string Url = 5;
    bytes Body = 6;
    BodyType BodyType = 7;
    string ContentType = 8;
    repeated string Headers = 9;
    string source = 10;
    int32 ttl = 11;
}

message Response {
    string EventId = 1;
    bytes Body = 2;
    BodyType BodyType = 3;
    string ContentType = 4;
    repeated string Headers = 5;
    int32 Status = 6;
    uint32 UsedTime = 7;
}